--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <p>
   The mbed interfaces with a <a href="https://os.mbed.com/users/4180_1/notebook/ulcd-144-g2-128-by-128-color-lcd/">uLCD display</a> an <a href="https://os.mbed.com/users/4180_1/notebook/adafruit-bluefruit-le-uart-friend---bluetooth-low-/">Adafruit Bluetooth UART Friend</a>, and a Class D Audio Amp connected to a speaker.
   </p>
-  <img src="qw.png" alt="">
+  <img src="qw.PNG" alt="">
   <br>
   The audio amp takes power from the Vout pin on the mbed, which draws less current and makes the PWM sound less obnoxious.
   <br>
-  <img src="qwe.png" alt="">
-  <img src="qwer.png" alt="">
+  <img src="qwe.PNG" alt="">
+  <img src="qwer.PNG" alt="">
   <h3>
     Code
   </h3>
