--- a/index.html
+++ b/index.html
@@ -175,6 +175,6 @@ void drawGB() {
 }
 </code>
 </pre>
-The full repository is published <a href="https://os.mbed.com/users/amcentag/code/crypt_mbed/">here</a>.
-
+The full repository is published <a href="https://os.mbed.com/users/amcentag/code/crypt_mbed/">here</a>. The code is available for easy perusal and comparison. There are a number of additional functions, as well as control flow shown there which could be helpful to a designer attempting to study or mimic the product.
+ 
 </body>
