--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style>
 <body>
   <h1>
-    ECE 4180 Final Project- mbed Rythm Game
+    ECE 4180 Final Project- mbed Rhythm Game
   </h1>
   <h2>
     by Andrew McEntaggart, Sultan Sayedzada, Keshav Shenoy
