--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </p>
   <img src="qw.PNG" alt="">
   <br>
-  The audio amp takes power from the Vout pin on the mbed, which draws less current and makes the PWM sound less obnoxious.
+  The audio amp takes power from the Vout pin on the mbed, which draws less current and makes the PWM sound less obnoxious. Alternatively, to reduce the chance of drawing too much current from the mbed, you could power the whole project from a barrel jack and 5V power supply. Remember to disconnect the mbed's VU pin from the power rails if you do this. We would also recommend implementing volume control in the audio amp.
   <br>
   <img src="qwe.PNG" alt="">
   <img src="qwer.PNG" alt="">
